--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.9.0",
     "core-js": "^3.6.4",
+    "mongoose": "^5.9.6",
     "node-sass": "^4.13.1",
+    "pouchdb": "^7.2.1",
+    "pouchdb-authentication": "^1.1.3",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vuex": "^3.1.2"
